; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_stv0297.c_stv0297_set_inversion.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_stv0297.c_stv0297_set_inversion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stv0297_state = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.stv0297_state*, i32)* @stv0297_set_inversion to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stv0297_set_inversion(%struct.stv0297_state* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.stv0297_state*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.stv0297_state* %0, %struct.stv0297_state** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 0, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  switch i32 %7, label %10 [
    i32 129, label %8
    i32 128, label %9
  ]

8:                                                ; preds = %2
  store i32 0, i32* %6, align 4
  br label %13

9:                                                ; preds = %2
  store i32 1, i32* %6, align 4
  br label %13

10:                                               ; preds = %2
  %11 = load i32, i32* @EINVAL, align 4
  %12 = sub nsw i32 0, %11
  store i32 %12, i32* %3, align 4
  br label %18

13:                                               ; preds = %9, %8
  %14 = load %struct.stv0297_state*, %struct.stv0297_state** %4, align 8
  %15 = load i32, i32* %6, align 4
  %16 = shl i32 %15, 3
  %17 = call i32 @stv0297_writereg_mask(%struct.stv0297_state* %14, i32 131, i32 8, i32 %16)
  store i32 0, i32* %3, align 4
  br label %18

18:                                               ; preds = %13, %10
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32 @stv0297_writereg_mask(%struct.stv0297_state*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
